fix(intro): links styling on small screens

--- a/components/Intro/intro.module.css
+++ b/components/Intro/intro.module.css
@@ -18,6 +18,7 @@
 
 .intro :global(a) {
   position: relative;
+  display: inline-block;
 }
 
 .intro :global(a::after) {
@@ -29,7 +30,7 @@
   top: 60%;
   left: -0.1em;
   right: -0.1em;
-  bottom: 0;
+  bottom: 5px;
   transition: top 200ms cubic-bezier(0, 0.8, 0.13, 1);
 }
 
